<resources>
    <string name="app_name">邮管理</string>
    <string name="button1">我是学生</string>
    <string name="button2">我是老师</string>
    <string name="web">http://www.njupt.edu.cn/</string>
    <string name="login_interface">登录界面</string>
    <string name="button3">返回上一步</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_text1">用户名:</string>
    <string name="login_text2">密     码:</string>
    <string name="login_hint1">请输入用户名</string>
    <string name="login_hint2">请输入密码</string>
</resources>