<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40sp"
        android:text="@string/login_interface"
        android:textColor="#000000"
        android:textSize="20sp" />
    <!--  用户名  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/login_text1"
            android:textColor="#000000"
            android:textSize="19sp" />

        <EditText
                android:id="@+id/UserName"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:hint="@string/login_hint1"
                android:text=""
                android:layout_weight="4"/>

    </LinearLayout>
    <!--  密  码  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/login_text2"
            android:textColor="#000000"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/Pwd"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:hint="@string/login_hint2"
            android:text=""
            android:inputType="number" />

    </LinearLayout>

    <CheckBox
        android:checked="true"
        android:id="@+id/checkBox"
        android:layout_width="123dp"
        android:layout_height="37dp"
        android:text="记住密码" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">
         //登录按钮

        <Button
            android:id="@+id/button_login"
            android:layout_width="185dp"

            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_1"
            android:onClick="btnClick1"
            android:text="@string/login"
            app:backgroundTint="@null" />
         //注册按钮
        <Button
            android:id="@+id/button_register"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_1"
            android:onClick="btnClick2"
            android:text="@string/register"
            app:backgroundTint="@null" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        android:src="@drawable/picture" />

</LinearLayout>