<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="205dp"
        android:scaleX="3"
        android:scaleY="3"
        android:text="@string/app_name"

        android:textColor="@color/purple_500"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="67dp"
        android:layout_marginLeft="67dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:background="@drawable/selector_1"
        android:text="@string/button1"
        android:onClick="btnClick1"
        android:textColor="@color/black"
        android:visibility="visible"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:background="@drawable/selector_1"
        android:text="@string/button2"
        android:onClick="btnClick2"
        android:textColor="@color/black"
        android:visibility="visible"
        app:backgroundTint="@color/sky_blue"
        app:layout_constraintBaseline_toBaselineOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button1"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="187dp"
        android:layout_height="52dp"
        android:layout_marginBottom="50dp"
        android:autoLink="web"
        android:background="@drawable/shape_2"
        android:text="@string/web"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>