<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40sp"
        android:text="注册"
        android:textColor="#000000"
        android:textSize="20sp" />

    <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

        <RadioButton
            android:id="@+id/btnMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="学生"
            android:textSize="19sp" />

        <RadioButton
            android:id="@+id/btnWoman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="教师"
            android:textSize="19sp" />
    </RadioGroup>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/login_text1"
                android:textColor="#000000"
                android:textSize="19sp" />

        <EditText
                android:id="@+id/etName1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:hint="@string/login_hint1"
                android:text=""
                android:layout_weight="4"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/login_text2"
                android:textColor="#000000"
                android:textSize="19sp" />

        <EditText
                android:id="@+id/etPwd1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="4"
                android:hint="@string/login_hint2"
                android:text=""
                android:inputType="number" />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/login_text2"
                android:textColor="#000000"
                android:textSize="19sp" />

        <EditText
            android:id="@+id/etPwd2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:hint="确认密码"
            android:inputType="number"
            android:text="" />

    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <Button
            android:id="@+id/rg_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_1"
            android:text="确认注册"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/rg_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_1"
            android:text="返回登录"
            app:backgroundTint="@null" />
    </LinearLayout>
</LinearLayout>